<resources>
    <string name="app_name">O2OMall</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="scan">扫码</string>
    <string name="cart">购物车</string>
    <string name="my">我的</string>
    <string name="myCollection">我的收藏</string>
    <string name="myOrder">我的订单</string>
    <string name="myAllCollection">查看所有收藏</string>
    <string name="myAllOrder">查看所有订单</string>
    <string name="cart_empty">购物车肚子空空</string>
    <string name="selectAll">全选</string>
    <string name="buy">去结算</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="shopTotal">合计：</string>
    <string name="shopTotalNum">￥0.00</string>
    <string name="shopTotalPrice">总额：</string>
    <string name="checkOut">去结算</string>
    <string name="delete">删除</string>
    <string name="accomplish">完成</string>
    <string name="load_error">加载失败</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="dog">狗</string>
    <string name="account">账号：</string>
    <string name="account_hint">用户名/邮箱/手机号</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="edit">编辑</string>
    <string name="suggest">请先登录再查看购物车</string>
    <string name="text_btn_addIntoCart">加入购物车</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
