<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >


    <RelativeLayout
        android:id="@+id/cart_suggest_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/cart_btn_login"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_login_dog"
            android:text="@string/login"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cart_btn_login"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/suggest"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/cart_tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@drawable/cart_no_data"
        android:text="@string/cart_empty"
        android:textColor="@color/gray"
        android:textSize="17sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/cart_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.lndroid.lndroidlib.view.AutoRecyclerView
            android:id="@+id/cart_lv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none" >
        </com.lndroid.lndroidlib.view.AutoRecyclerView>

        <RelativeLayout
            android:id="@+id/cart_check_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray" >

            <CheckBox
                android:id="@+id/cart_cb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:text="@string/selectAll"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/cart_tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/cart_btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/red"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>